start adding day-picker

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cloudinary-react": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.3"
   }
 }
