--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-pwa-manifest": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
