--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "compression-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
